Added HTML full structure

--- a/index.html
+++ b/index.html
@@ -8,15 +8,186 @@
     <!-- added daisyUI & Tailwind links -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+    <!-- Tailwind Custom Styles -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        customGreen: '#B4F461',
+                    }
+                }
+            }
+        }
+    </script>
+
+    <!-- Custom styles -->
+    <style>
+        .font-lexend {
+            font-family: "Lexend", sans-serif;
+        }
+    </style>
+
 </head>
 
-<body>
-    <header>
+<body class="font-lexend">
+    <header class="sticky top-0 z-10 backdrop-blur bg-transparent md:mb-5">
+        <nav class="bg-[#F9F7F3] ">
+            <!-- Navbar starts here -->
+            <div class="w-[90%] mx-auto pb-9 pt-4">
+                <!-- left -->
+                <div class="navbar">
+                    <div class="navbar-start">
+                        <button class="bg-customGreen btn btn-lg text-xl font-semibold px-8 py-1">Blog</button>
+                    </div>
+                    <!-- middle -->
+                    <div class="navbar-center space-x-4">
+                        <img src="./assets/logo.png" alt="logo">
+                        <h1 class="text-xl font-semibold hidden md:block">Donate Bangladesh</h1>
+                    </div>
+
+                    <!-- right -->
+                    <div class="navbar-end space-x-2">
+                        <img src="./assets/coin.png" alt="">
+                        <h5 class="text-xl font-semibold">5000</h5>
+                        <h4 class="text-xl font-semibold">BDT</h4>
+                    </div>
+
+                </div>
+            </div>
+
+        </nav>
+        <!-- Navbar ends here -->
+
+        <!-- Donate and History Button -->
+        <div class="flex justify-center gap-x-4 mt-7 md:mt-12 relative">
+            <button class="btn btn-lg px-10 text-xl font-semibold">Donate</button>
+            <button class="btn btn-lg px-10 text-xl font-semibold">History</button>
+        </div>
+        <div class="divider"></div>
 
     </header>
 
     <main>
+        <section class="w-[85%] mx-auto  space-y-7">
 
+            <!-- card-1 (Noakhali, Bangladesh) -->
+            <div class="relative z-0  border border-5 border-r-gray-200 rounded-2xl">
+                <div class="hero ">
+                    <div class="hero-content flex-col lg:flex-row gap-x-10">
+                        <!-- Noakhali Image -->
+                        <img class="mb-8 md:m-0" src="./assets/noakhali.png" alt="">
+                        <!-- Form section -->
+                        <div class="">
+                            <div
+                                class="rounded-lg p-7 flex items-center space-x-2 bg-[#1111110D] w-[150px] h-[44px] justify-center mb-4">
+                                <img src="./assets/coin.png" alt="">
+                                <h5 class="text-xl font-semibold">5000</h5>
+                                <h4 class="text-xl font-semibold">BDT</h4>
+                            </div>
+
+                            <h1 class="text-xl font-bold mb-4">Donate for Flood at Noakhali, Bangladesh</h1>
+                            <p class="mb-4"> The recent floods in Noakhali have caused significant damage to homes
+                                infrastructure.
+                                Your donation will help provide essential supplies and to those affected by this
+                                disaster. Every contribution, big or small, makes difference. Please join us in
+                                supporting the relief efforts and making a positive impact on the lives of those in
+                                need.</p>
+
+                            <!-- Form -->
+                            <form class="mt-6 w-full">
+                                <input type="text" placeholder="Write Donation Amount"
+                                    class="input input-bordered w-full" required />
+                                <div class="form-control mt-6 ">
+                                    <button class="btn bg-customGreen w-full">Donate Now</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-2 (Feni, Bangladesh) -->
+            <div class="relative z-0  border border-5 border-r-gray-200 rounded-2xl">
+                <div class="hero ">
+                    <div class="hero-content flex-col lg:flex-row gap-x-10">
+                        <!-- Noakhali Image -->
+                        <img class="mb-8 md:m-0" src="./assets/feni.png" alt="">
+                        <!-- Form section -->
+                        <div class="">
+                            <div
+                                class="rounded-lg p-7 flex items-center space-x-2 bg-[#1111110D] w-[150px] h-[44px] justify-center mb-4">
+                                <img src="./assets/coin.png" alt="">
+                                <h5 class="text-xl font-semibold">5000</h5>
+                                <h4 class="text-xl font-semibold">BDT</h4>
+                            </div>
+
+                            <h1 class="text-xl font-bold mb-4">Donate for Flood Relief in Feni,Bangladesh</h1>
+                            <p class="mb-4">The recent floods in Feni have devastated local communities, leading to
+                                severe disruption and loss. Your generous donation will help provide immediate aid,
+                                including food, clean water, and medical supplies, to those affected by this calamity.
+                                Together, we can offer crucial support and help rebuild lives in the aftermath of this
+                                disaster. Every contribution counts towards making a real difference. Please consider
+                                donating today to assist those in urgent need.</p>
+                            <!-- Form -->
+                            <form class="mt-6 w-full">
+                                <input type="text" placeholder="Write Donation Amount"
+                                    class="input input-bordered w-full" required />
+                                <div class="form-control mt-6 ">
+                                    <button class="btn bg-customGreen w-full">Donate Now</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-3 (Quota Movement, Bangladesh) -->
+            <div class="relative z-0 border border-5 border-r-gray-200 rounded-2xl">
+                <div class="hero ">
+                    <div class="hero-content flex-col lg:flex-row gap-x-10">
+                        <!-- Noakhali Image -->
+                        <img class="mb-8 md:m-0" src="./assets/quota-protest.png" alt="">
+                        <!-- Form section -->
+                        <div class="">
+                            <div
+                                class="rounded-lg p-7 flex items-center space-x-2 bg-[#1111110D] w-[150px] h-[44px] justify-center mb-4">
+                                <img src="./assets/coin.png" alt="">
+                                <h5 class="text-xl font-semibold">5000</h5>
+                                <h4 class="text-xl font-semibold">BDT</h4>
+                            </div>
+
+                            <h1 class="text-xl font-bold mb-4">Aid for Injured in the Quota Movement</h1>
+                            <p class="mb-4"> The recent Quota movement has resulted in numerous injuries and significant
+                                hardship for many individuals. Your support is crucial in providing medical assistance,
+                                rehabilitation, and necessary supplies to those affected. By contributing, you help
+                                ensure that injured individuals receive the care and support they need during this
+                                challenging time. Every donation plays a vital role in alleviating their suffering and
+                                aiding in their recovery. Please consider making a donation to support these brave
+                                individuals in their time of need.</p>
+
+                            <!-- Form -->
+                            <form class="mt-6 w-full">
+                                <input type="text" placeholder="Write Donation Amount"
+                                    class="input input-bordered w-full" required />
+                                <div class="form-control mt-6 ">
+                                    <button class="btn bg-customGreen w-full">Donate Now</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
     </main>
 
     <footer>
