--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -8,13 +8,10 @@
     <!-- added daisyUI & Tailwind links -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./blog.html">
-
     <!-- Tailwind Custom Styles -->
     <script>
         tailwind.config = {
@@ -28,14 +25,12 @@
             }
         }
     </script>
-
     <!-- Custom styles -->
     <style>
         .font-lexend {
             font-family: "Lexend", sans-serif;
         }
     </style>
-
 </head>
 
 <body class="font-lexend">
@@ -54,32 +49,28 @@
                         <img src="./assets/logo.png" alt="logo">
                         <h1 class="text-xl font-semibold hidden md:block">Donate Bangladesh</h1>
                     </div>
-
                     <!-- right -->
                     <div class="navbar-end space-x-2">
                         <img src="./assets/coin.png" alt="">
                         <h5 id="my-balance" class="text-xl font-semibold">5000</h5>
                         <h4 class="text-xl font-semibold">BDT</h4>
                     </div>
-
                 </div>
             </div>
-
         </nav>
         <!-- Navbar ends here -->
-
         <!-- Donate and History Button -->
         <div class="flex justify-center gap-x-4 mt-7 md:mt-12 relative">
-            <button id="donate-btn" class="rounded-lg btn-lg px-10 text-xl font-semibold bg-customGreen">Donate</button>
-            <button id="history-btn" class=" rounded-lg  btn-lg px-10 text-xl font-semibold ">History</button>
+            <button id="donate-btn"
+                class=" rounded-lg btn-lg px-10 text-xl font-semibold bg-customGreen border border-5 border-gray-300">Donate</button>
+            <button id="history-btn"
+                class=" rounded-lg  btn-lg px-10 text-xl font-semibold border border-5 border-gray-300">History</button>
         </div>
         <div class="divider"></div>
-
     </header>
-
+    <!-- main section starts-->
     <main>
         <section id="card-container" class="w-[85%] mx-auto  space-y-7">
-
             <!-- card-1 (Noakhali, Bangladesh) -->
             <div id="" class="relative z-0  border border-5 border-r-gray-200 rounded-2xl">
                 <div class="hero ">
@@ -94,7 +85,6 @@
                                 <h5 id="noakhali-balance" class="text-xl font-semibold">0</h5>
                                 <h4 class="text-xl font-semibold">BDT</h4>
                             </div>
-
                             <h1 class="text-xl font-bold mb-4">Donate for Flood at Noakhali, Bangladesh</h1>
                             <p class="mb-4"> The recent floods in Noakhali have caused significant damage to homes
                                 infrastructure.
@@ -102,7 +92,6 @@
                                 disaster. Every contribution, big or small, makes difference. Please join us in
                                 supporting the relief efforts and making a positive impact on the lives of those in
                                 need.</p>
-
                             <!-- Form -->
                             <form class="mt-6 w-full">
                                 <input id="input-noakhali-amount" type="text" placeholder="Write Donation Amount"
@@ -116,7 +105,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- card-2 (Feni, Bangladesh) -->
             <div class="relative z-0  border border-5 border-r-gray-200 rounded-2xl">
                 <div class="hero ">
@@ -131,7 +119,6 @@
                                 <h5 id="feni-balance" class="text-xl font-semibold">0</h5>
                                 <h4 class="text-xl font-semibold">BDT</h4>
                             </div>
-
                             <h1 class="text-xl font-bold mb-4">Donate for Flood Relief in Feni,Bangladesh</h1>
                             <p class="mb-4">The recent floods in Feni have devastated local communities, leading to
                                 severe disruption and loss. Your generous donation will help provide immediate aid,
@@ -151,7 +138,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- card-3 (Quota Movement, Bangladesh) -->
             <div class="relative z-0 border border-5 border-r-gray-200 rounded-2xl">
                 <div class="hero ">
@@ -166,7 +152,6 @@
                                 <h5 id="quota-balance" class="text-xl font-semibold">0</h5>
                                 <h4 class="text-xl font-semibold">BDT</h4>
                             </div>
-
                             <h1 class="text-xl font-bold mb-4">Aid for Injured in the Quota Movement</h1>
                             <p class="mb-4"> The recent Quota movement has resulted in numerous injuries and significant
                                 hardship for many individuals. Your support is crucial in providing medical assistance,
@@ -175,7 +160,6 @@
                                 challenging time. Every donation plays a vital role in alleviating their suffering and
                                 aiding in their recovery. Please consider making a donation to support these brave
                                 individuals in their time of need.</p>
-
                             <!-- Form -->
                             <form class="mt-6 w-full">
                                 <input id="input-quota-amount" type="text" placeholder="Write Donation Amount"
@@ -188,34 +172,34 @@
                     </div>
                 </div>
             </div>
-
         </section>
-
         <!-- Transaction starts -->
         <div id="history-list" class=" text-center hidden">
-            <h2 class=" text-3xl text-center">Transaction History</h2>
+            <h2 class=" text-3xl text-center"></h2>
             <div id="history-container" class="space-y-5">
-
             </div>
         </div>
-
         <!-- Transaction ends -->
     </main>
+    <!-- main section ends-->
+
+    <!-- footer section starts-->
+    <footer class="mt-20 bg-[#F9F7F3] w-full h-28 sticky">
+    </footer>
+    <!-- footer section starts-->
 
     <!-- pop-up Modal -->
-    <!-- Success Modal -->
     <div id="success-modal" class="modal flex items-center justify-center">
         <div class="modal-box text-center">
-            <h2 class="font-bold text-lg">Congrats!</h2>
+            <h2 class="font-bold text-2xl">Congrats!</h2>
             <img class="mx-auto my-4" src="./assets/coin.png" alt="">
             <p>You Have Donated for Humankind.</p>
             <h3 class="text-xl font-bold">Successfully</h3>
             <div class="modal-action justify-center">
-                <button id="close-modal" class="btn">close confirmation</button>
+                <button id="close-modal" class="btn ">close confirmation</button>
             </div>
         </div>
     </div>
-
 
     <!-- JavaScript file added -->
     <script src="./js/features.js"></script>
