Added more styles

--- a/blog.html
+++ b/blog.html
@@ -16,9 +16,6 @@
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/53ea01123b.js" crossorigin="anonymous"></script>
-
-    <!-- <link rel="stylesheet" href="./blog.html"> -->
-
     <!-- Tailwind Custom Styles -->
     <script>
         tailwind.config = {
@@ -32,14 +29,12 @@
             }
         }
     </script>
-
     <!-- Custom styles -->
     <style>
         .font-lexend {
             font-family: "Lexend", sans-serif;
         }
     </style>
-
 </head>
 
 <body class="font-lexend">
@@ -58,24 +53,19 @@
                         <img src="./assets/logo.png" alt="logo">
                         <h1 class="text-xl font-semibold hidden md:block">Donate Bangladesh</h1>
                     </div>
-
                     <!-- right -->
                     <div class="navbar-end space-x-2">
                         <img src="./assets/coin.png" alt="">
                         <h5 id="my-balance" class="text-xl font-semibold">5000</h5>
                         <h4 class="text-xl font-semibold">BDT</h4>
                     </div>
-
                 </div>
-
             </div>
             <!-- <div class="divider"></div> -->
-
         </nav>
         <!-- Navbar ends here -->
-
     </header>
-
+    <!-- main section -->
     <main>
         <h1 class="pl-7 md:pl-16 my-8 text-4xl text-success">Important FAQ <i
                 class="fa-sharp fa-2xl fa-light fa-question"></i></h1>
@@ -84,7 +74,8 @@
                 <input type="radio" name="my-accordion-2" checked="checked" />
                 <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
                 <div class="collapse-content">
-                    <p>The DOM is a programming interface that represents a web page as a structured tree, allowing developers to dynamically modify its content, structure, and style using JavaScript.
+                    <p>The DOM is a programming interface that represents a web page as a structured tree, allowing
+                        developers to dynamically modify its content, structure, and style using JavaScript.
                     </p>
                 </div>
             </div>
@@ -92,7 +83,8 @@
                 <input type="radio" name="my-accordion-2" />
                 <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
                 <div class="collapse-content">
-                    <p>You can select elements using methods like selecting by ID, class, or CSS selectors, allowing you to target specific parts of the page for manipulation.
+                    <p>You can select elements using methods like selecting by ID, class, or CSS selectors, allowing you
+                        to target specific parts of the page for manipulation.
                     </p>
                 </div>
             </div>
@@ -101,7 +93,9 @@
                 <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and
                     why is it useful?</div>
                 <div class="collapse-content">
-                    <p>Event delegation involves attaching a single event listener to a parent element to handle events from its children. It's efficient for handling multiple elements and works well with dynamic content.
+                    <p>Event delegation involves attaching a single event listener to a parent element to handle events
+                        from its children. It's efficient for handling multiple elements and works well with dynamic
+                        content.
                     </p>
                 </div>
             </div>
@@ -111,19 +105,17 @@
                 <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles
                     using the DOM?</div>
                 <div class="collapse-content">
-                    <p>You can modify attributes like src or href, and update styles by directly changing CSS properties or adding/removing classes, allowing dynamic changes to content and appearance.
+                    <p>You can modify attributes like src or href, and update styles by directly changing CSS properties
+                        or adding/removing classes, allowing dynamic changes to content and appearance.
                     </p>
                 </div>
             </div>
 
         </section>
     </main>
-
+    <!-- Footer section -->
     <footer class="mt-20 bg-[#F9F7F3] w-full h-28">
-
     </footer>
-
 </body>
 
 </html>
-
