--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="divider"></div>
     </header>
     <!-- main section starts-->
-    <main>
+    <main class="min-h-60">
         <section id="card-container" class="w-[85%] mx-auto  space-y-7">
             <!-- card-1 (Noakhali, Bangladesh) -->
             <div id="" class="relative z-0  border border-5 border-r-gray-200 rounded-2xl">
@@ -207,5 +207,4 @@
     <script src="./js/donate.js"></script>
 
 </body>
-
 </html>
