Added more interactive styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <!-- left -->
                 <div class="navbar">
                     <div class="navbar-start">
-                        <button class="bg-customGreen btn btn-lg text-xl font-semibold px-8 py-1"><a
+                        <button><a class="bg-customGreen btn btn-lg text-xl font-semibold px-8 py-1"
                                 href="./blog.html">Blog</a></button>
                     </div>
                     <!-- middle -->
