--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
                 <!-- left -->
                 <div class="navbar">
                     <div class="navbar-start">
-                        <button class="bg-customGreen btn btn-lg text-xl font-semibold px-8 py-1"><a
+                        <button><a class="bg-customGreen btn btn-lg text-xl font-semibold px-8 py-1"
                                 href="./index.html">Home</a></button>
                     </div>
                     <!-- middle -->
