Finilized the project

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         </nav>
         <!-- Navbar ends here -->
         <!-- Donate and History Button -->
-        <div class="flex justify-center gap-x-4 mt-7 md:mt-12 relative">
+        <div class="flex justify-center gap-x-4 mt-7 md:mt-12 relative pb-6">
             <button id="donate-btn"
                 class=" rounded-lg btn-lg px-10 text-xl font-semibold bg-customGreen border border-5 border-gray-300">Donate</button>
             <button id="history-btn"
                 class=" rounded-lg  btn-lg px-10 text-xl font-semibold border border-5 border-gray-300">History</button>
         </div>
-        <div class="divider"></div>
+        <!-- <div class="divider"></div> -->
     </header>
     <!-- main section starts-->
     <main class="min-h-60">
