Improve the styles

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <input id="input-noakhali-amount" type="text" placeholder="Write Donation Amount"
                                     class="input input-bordered w-full" required />
                                 <div class="form-control mt-6 ">
-                                    <button id="donate-noakhali-btn" class="btn bg-customGreen w-full">Donate
+                                    <button id="donate-noakhali-btn" class="btn bg-customGreen w-full text-xl font-semibold">Donate
                                         Now</button>
                                 </div>
                             </form>
@@ -131,7 +131,7 @@
                                 <input id="input-feni-amount" type="text" placeholder="Write Donation Amount"
                                     class="input input-bordered w-full" required />
                                 <div class="form-control mt-6 ">
-                                    <button id="donate-feni-btn" class="btn bg-customGreen w-full">Donate Now</button>
+                                    <button id="donate-feni-btn" class="btn bg-customGreen w-full text-xl font-semibold">Donate Now</button>
                                 </div>
                             </form>
                         </div>
@@ -165,7 +165,7 @@
                                 <input id="input-quota-amount" type="text" placeholder="Write Donation Amount"
                                     class="input input-bordered w-full" required />
                                 <div class="form-control mt-6 ">
-                                    <button id="donate-quota-btn" class="btn bg-customGreen w-full">Donate Now</button>
+                                    <button id="donate-quota-btn" class="btn bg-customGreen w-full text-xl font-semibold">Donate Now</button>
                                 </div>
                             </form>
                         </div>
